styles/main.css
/* Use a more-intuitive box-sizing model */
*, *::before, *::after {
  box-sizing: border-box;
}

/* Improve media defaults */
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

/* Avoid text overflows */
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

p {
  line-height: 1.5;
  text-wrap: pretty;
  /* Improve line wrapping */
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1.1;
  /* Improve line wrapping */
  text-wrap: balance;
}

/* Main navigation */
nav > ul {
  display: flex;
  gap: 1em;
  flex-wrap: wrap;
  padding-inline-start: 0;
}

nav > ul > li {
  list-style: none;
}

nav > ul > li > a {
  display: flex;
  align-items: center;
  border: 0.1em dashed;
  border-radius: 1em;
  padding: 0.75em 1.5em;
}

/* Link style */
@supports (text-underline-offset: 0.15em) {
  a:link, a:visited {
    text-decoration-thickness: 0.1em;
    text-underline-offset: 0.15em;
  }
}
@supports (text-underline-offset: 0.15em) {
  a:hover, a:focus {
    text-decoration-thickness: 0.2em;
    text-underline-offset: 0.15em;
  }
  

